# reflex-app

./: .gitignore  cabal-ghcjs.project  cabal.project  default.nix
backend/: backend.cabal
backend/src/: Main.hs  TokenValidation.hs
backend/test/: .envrc
backend/test/docker/postgres/: Dockerfile  reflex-app.sql  run-postgres.sh
common/: common.cabal
common/src/: Common.hs
deployment/: .gitignore  deploy.nix  deploy.sh  pkgs.nix  system.nix
frontend/: LICENSE  frontend.cabal
frontend-browser/: builder.sh  default.nix  index.html
frontend-browser/js/: auth.js
frontend-js-minified/: builder.sh  default.nix
frontend-server/: frontend-server.cabal
frontend-server/src/: Main.hs  TokenValidation.hs
frontend-server/test-env/: .envrc  .swo  .swp  x
frontend/src/: Main.hs
frontend/src/SignIn/: Event.hs  GHC.hs  GHCJS.hs
